View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032262 | Open CASCADE | OCCT:Samples | public | 2021-03-29 17:42 | 2021-04-03 12:50 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.6.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032262: Samples - JNIViewer sample compilation failure due to usage of removed aliases to Image_Format | ||||
Description | There are compilation errors since 0032056 to be fixed:C:/occt.git/samples/java/jniviewer/app/src/main/jni/OcctJni_Viewer.cxx:580:46: error: no member named 'ImgBGRA' in 'Image_PixMap' if (!anAlienImage.InitTrash (Image_PixMap::ImgBGRA, theWidth, theHeight)) ~~~~~~~~~~~~~~^ C:/occt.git/samples/java/jniviewer/app/src/main/jni/OcctJni_Viewer.cxx:589:38: error: no member named 'ImgRGBA' in 'Image_PixMap' anImage.InitWrapper (Image_PixMap::ImgRGBA, | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32262 has been created by kgv. SHA-1: bbc5899a8c2cc87ae1305e3603b7677e52eea092 No new revisions were added by this update. |
|
Please raise the patch - OCCT: branch CR32262. |
|
Branch CR32262 has been updated by kgv. SHA-1: 3bd5bb92b6c31257f4f4d9c120f5ac235bcaf79d Detailed log of new commits: Author: kgv Date: Mon Mar 29 17:56:06 2021 +0300 0032262: Samples - JNIViewer sample compilation failure due to usage of removed aliases to Image_Format |
|
Combination - OCCT branch : IR-2021-04-02 master SHA - 5e4f263d1cfd948e6a91aa584919bb6d86256a86 a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-04-02 SHA - 7cc5f9bb4eb61152ffc5290516ae20c649a33a55 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18055.90000000045 / 18179.810000000525 [-0.68%] Products Total CPU difference: 11506.800000000105 / 11565.220000000114 [-0.51%] Windows-64-VC14: OCCT Total CPU difference: 19512.09375 / 19430.5 [+0.42%] Products Total CPU difference: 12943.234375 / 12843.765625 [+0.77%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32262 has been deleted by inv. SHA-1: 3bd5bb92b6c31257f4f4d9c120f5ac235bcaf79d |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-03-29 17:42 | kgv | New Issue | |
2021-03-29 17:42 | kgv | Assigned To | => bugmaster |
2021-03-29 17:42 | git | Note Added: 0099823 | |
2021-03-29 17:43 | kgv | Note Added: 0099824 | |
2021-03-29 17:43 | kgv | Status | new => resolved |
2021-03-29 17:43 | kgv | Status | resolved => reviewed |
2021-03-29 17:44 | kgv | Relationship added | child of 0032056 |
2021-03-29 17:44 | kgv | Description Updated | |
2021-03-29 17:56 | git | Note Added: 0099825 | |
2021-04-03 11:55 | bugmaster | Note Added: 0100016 | |
2021-04-03 11:55 | bugmaster | Status | reviewed => tested |
2021-04-03 12:01 | bugmaster | Test case number | => Not required |
2021-04-03 12:13 | bugmaster | Changeset attached | => occt master 20085dac |
2021-04-03 12:13 | bugmaster | Status | tested => verified |
2021-04-03 12:13 | bugmaster | Resolution | open => fixed |
2021-04-03 12:50 | git | Note Added: 0100063 |