0032262: Samples - JNIViewer sample compilation failure due to usage of removed aliases to Image_Format